--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # Ignore bundler config.
 /.bundle
+.env
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
@@ -16,6 +17,7 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+
 
 # Ignore Byebug command history file.
 .byebug_history
